--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -1,47 +1,94 @@
-#background {
-    background-color: mistyrose;
+/* Reset */
+html, body {
+    height: 100%;
+    width: 100%;
+    overflow: auto;
+}
+/* Small */
+
+@media (max-width: 768px) {
+    #background {
+        background-color: mistyrose;
+        border: 10px solid floralwhite;
+    }
+    #top-nav {
+        height: 100px;
+        padding-top: 50px;
+        padding-bottom: 15px;
+        border-bottom: 1px solid black;
+    }
+    li {
+        list-style-type: none;
+    }
+    li a {
+        font-family: 'Open Sans Condensed', sans-serif;
+        font-size: 1.2em;
+        color: black;
+        text-align: center;
+    }
+    .col-4 {
+        text-align: center;
+    }
+    #insta-icon {
+        height: 30px;
+        width: 30px;
+    }
+    #tweet-icon {
+        height: 30px;
+        width: 30px;
+    }
 }
 
-#top-nav {
-    height: 100px;
-    padding-top: 50px;
-    padding-bottom: 15px;
-    border-bottom: 1px solid black;
-}
-li {
-    list-style-type: none;
-}
-#name {
-    font-family: 'Playfair Display', serif;
-    font-size: 3em;
-    color: black;
-}
-li a {
-    font-family: 'Open Sans Condensed', sans-serif;
-    font-size: 1.5em;
-    color: black;
-}
-.col-sm-4 {
-    text-align: center;
-}
-footer {
-    border-top: 1px solid black;
-}
-#insta-icon {
-    height: 40px;
-    width: 40px;
-}
-#tweet-icon {
-    height: 60px;
-    width: 60px;
-}
-#intro-carousel {
-    background-size: cover;
-    background-position: center;
-}
-.carousel {
-    margin: 20px;
-}
-.carousel-inner {
-    margin-left: 5%;
+/* Larger */
+@media (min-width: 768px) {
+
+    #background {
+        background-color: mistyrose;
+        border: 10px solid floralwhite;
+    }
+    #top-nav {
+        height: 100px;
+        padding-top: 50px;
+        padding-bottom: 15px;
+        border-bottom: 1px solid black;
+    }
+    li {
+        list-style-type: none;
+    }
+    li a {
+        font-family: 'Open Sans Condensed', sans-serif;
+        font-size: 1.5em;
+        color: black;
+    }
+    .col-4 {
+        text-align: center;
+    }
+    footer {
+        border-top: 1px solid black;
+    }
+    #insta-icon {
+        height: 40px;
+        width: 40px;
+    }
+    #tweet-icon {
+        height: 60px;
+        width: 60px;
+    }
+    #intro-carousel {
+        background-size: cover;
+        background-position: center;
+    }
+    .carousel {
+        margin: 20px;
+        max-width: 100%;
+    }
+    .carousel-inner {
+        margin-left: 35%;
+        max-width: 100%;
+    }
+    h1 {
+        text-align: center;
+        font-family: 'Playfair Display', serif;
+        margin-top: 7%;
+    }
 }
