--- a/css/welcome.css
+++ b/css/welcome.css
@@ -100,6 +100,9 @@ html, body {
 
     /* Body */
 
+    #center-images {
+        margin: 7%;
+    }
     p {
         font-family: 'Open Sans Condensed', sans-serif;
         font-size: 1.2em;
