--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -4,53 +4,17 @@ html, body {
     width: 100%;
     overflow: auto;
 }
-/* Small */
 
-@media (max-width: 768px) {
+
     #background {
-        background-color: mistyrose;
-        border: 10px solid floralwhite;
+        background-color: black;
+        border: 10px solid #FF7828;
     }
     #top-nav {
         height: 100px;
         padding-top: 50px;
         padding-bottom: 15px;
-        border-bottom: 1px solid black;
-    }
-    li {
-        list-style-type: none;
-    }
-    li a {
-        font-family: 'Open Sans Condensed', sans-serif;
-        font-size: 1.2em;
-        color: black;
-        text-align: center;
-    }
-    .col-4 {
-        text-align: center;
-    }
-    #insta-icon {
-        height: 30px;
-        width: 30px;
-    }
-    #tweet-icon {
-        height: 30px;
-        width: 30px;
-    }
-}
-
-/* Larger */
-@media (min-width: 768px) {
-
-    #background {
-        background-color: mistyrose;
-        border: 10px solid floralwhite;
-    }
-    #top-nav {
-        height: 100px;
-        padding-top: 50px;
-        padding-bottom: 15px;
-        border-bottom: 1px solid black;
+        border-bottom: 1px solid #FF7828;
     }
     li {
         list-style-type: none;
@@ -58,13 +22,13 @@ html, body {
     li a {
         font-family: 'Open Sans Condensed', sans-serif;
         font-size: 1.5em;
-        color: black;
+        color: #FF7828;
     }
     .col-4 {
         text-align: center;
     }
     footer {
-        border-top: 1px solid black;
+        border-top: 1px solid #FF7828;
     }
     #insta-icon {
         height: 40px;
@@ -91,4 +55,3 @@ html, body {
         font-family: 'Playfair Display', serif;
         margin-top: 7%;
     }
-}
