--- a/css/welcome.css
+++ b/css/welcome.css
@@ -7,35 +7,26 @@ html, body {
 
 
     #background {
-        background:-webkit-gradient(radial, 168 6, 0, 220 -257, 465, from(#B39700), to(#FF7828));
+        background: rgba(255,98,66,1);
+        background: -moz-linear-gradient(top, rgba(255,98,66,1) 0%, rgba(255,98,66,1) 32%, rgba(255,135,95,1) 100%);
+        /*background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(255,98,66,1)), color-stop(32%, rgba(255,98,66,1)), color-stop(100%, rgba(255,135,95,1)));*/
+        background: -webkit-linear-gradient(top, rgba(255,98,66,1) 0%, rgba(255,98,66,1) 32%, rgba(255,135,95,1) 100%);
+        background: -o-linear-gradient(top, rgba(255,98,66,1) 0%, rgba(255,98,66,1) 32%, rgba(255,135,95,1) 100%);
+        background: -ms-linear-gradient(top, rgba(255,98,66,1) 0%, rgba(255,98,66,1) 32%, rgba(255,135,95,1) 100%);
+        background: linear-gradient(to bottom, rgba(255,98,66,1) 0%, rgba(255,98,66,1) 32%, rgba(255,135,95,1) 100%);
         border: 10px solid #4B2731;
+        width: 100vw;
         max-width: 100%;
+        height: 100vh;
         margin: 0;
     }
 
     /* Header */
 
-    #top-nav {
-        height: 100px;
-        padding-top: 50px;
-        padding-bottom: 15px;
-        border-bottom: 1px solid black;
-    }
-    li {
-        list-style-type: none;
-    }
-    li a {
-        font-family: 'Open Sans Condensed', sans-serif;
-        font-size: 1.7em;
-        color: black;
-        text-align: center;
-    }
+
 
     /* Body */
 
-    #center-images {
-        margin: 7%;
-    }
     p {
         font-family: 'Open Sans Condensed', sans-serif;
         font-size: 1.2em;
@@ -48,13 +39,7 @@ html, body {
         box-shadow: 0 0 1em gold;
         align-content: center;
     }
-    h5 {
-        margin-top: 3%;
-        color: #4B2731;
-        font-family: 'Playfair Display', serif;
-        font-size: 3em;
-        text-align: center;
-    }
+
     .rose {
         transition:All 1s ease;
             -webkit-transition:All 1s ease;
@@ -76,14 +61,3 @@ html, body {
 
     /* Footer */
 
-    footer {
-        border-top: 1px solid black;
-    }
-    #insta-icon {
-        height: 40px;
-        width: 40px;
-    }
-    #tweet-icon {
-        height: 60px;
-        width: 60px;
-    }
