--- a/css/index.css
+++ b/css/index.css
@@ -5,59 +5,64 @@ html, body {
     overflow: auto;
 }
 
-
-    #background {
-        background: rgba(255,98,66,1);
-        background: -moz-linear-gradient(top, rgba(255,98,66,1) 0%, rgba(255,98,66,1) 32%, rgba(255,135,95,1) 100%);
-        /*background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(255,98,66,1)), color-stop(32%, rgba(255,98,66,1)), color-stop(100%, rgba(255,135,95,1)));*/
-        background: -webkit-linear-gradient(top, rgba(255,98,66,1) 0%, rgba(255,98,66,1) 32%, rgba(255,135,95,1) 100%);
-        background: -o-linear-gradient(top, rgba(255,98,66,1) 0%, rgba(255,98,66,1) 32%, rgba(255,135,95,1) 100%);
-        background: -ms-linear-gradient(top, rgba(255,98,66,1) 0%, rgba(255,98,66,1) 32%, rgba(255,135,95,1) 100%);
-        background: linear-gradient(to bottom, rgba(255,98,66,1) 0%, rgba(255,98,66,1) 32%, rgba(255,135,95,1) 100%);
-        border: 10px solid #4B2731;
-        width: 100vw;
-        max-width: 100%;
-        height: 100vh;
-        margin: 0;
-    }
-
-    /* Header */
-
+body {
+    display: flex;
+    height: 100vh;
+    max-width: 100%;
+    margin: 0;
+}
+#background {
+    width: 100vw;
+    max-width: 100%;
+    background: rgba(255, 98, 66, 1);
+    background: -moz-linear-gradient(top, rgba(255, 98, 66, 1) 0%, rgba(255, 98, 66, 1) 32%, rgba(255, 135, 95, 1) 100%);
+    background: -webkit-linear-gradient(top, rgba(255, 98, 66, 1) 0%, rgba(255, 98, 66, 1) 32%, rgba(255, 135, 95, 1) 100%);
+    background: -o-linear-gradient(top, rgba(255, 98, 66, 1) 0%, rgba(255, 98, 66, 1) 32%, rgba(255, 135, 95, 1) 100%);
+    background: -ms-linear-gradient(top, rgba(255, 98, 66, 1) 0%, rgba(255, 98, 66, 1) 32%, rgba(255, 135, 95, 1) 100%);
+    background: linear-gradient(to bottom, rgba(255, 98, 66, 1) 0%, rgba(255, 98, 66, 1) 32%, rgba(255, 135, 95, 1) 100%);
+}
 
 
-    /* Body */
+#top-nav {
+    display: flex;
+    flex-direction: row;
+    margin: 0;
+    color: greenyellow;
+    justify-content: space-around;
+    align-items: center;
+}
 
-    p {
-        font-family: 'Open Sans Condensed', sans-serif;
-        font-size: 1.2em;
-        color: black;
-        text-align: center;
-    }
-    #art-img {
-        height:300px;
-        width: auto;
-        box-shadow: 0 0 1em gold;
-        align-content: center;
-    }
+h1 {
+    font-family: 'Cinzel', serif;
+    font-size: 5rem;
+}
 
-    .rose {
-        transition:All 1s ease;
-            -webkit-transition:All 1s ease;
-            -moz-transition:All 1s ease;
-            -o-transition:All 1s ease;
-        transform: rotate(4deg) scale(1) skew(1deg) translate(10px);
-            -webkit-transform: rotate(4deg) scale(1) skew(1deg) translate(10px);
-            -moz-transform: rotate(4deg) scale(1) skew(1deg) translate(10px);
-            -o-transform: rotate(4deg) scale(1) skew(1deg) translate(10px);
-            -ms-transform: rotate(4deg) scale(1) skew(1deg) translate(10px);
-    }
-    .rose:hover{
-        transform: rotate(360deg) scale(1) skew(1deg) translate(0px);
-            -webkit-transform: rotate(360deg) scale(1) skew(1deg) translate(0px);
-            -moz-transform: rotate(360deg) scale(1) skew(1deg) translate(0px);
-            -o-transform: rotate(360deg) scale(1) skew(1deg) translate(0px);
-            -ms-transform: rotate(360deg) scale(1) skew(1deg) translate(0px);
-    }
+.nav-text {
+    font-family: 'Open Sans Condensed', sans-serif;
+    font-size: 2rem;
+    justify-content: flex-end;
+    color: greenyellow;
+}
 
-    /* Footer */
+#center-content {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    background-color: floralwhite;
+    border: .5em solid black
+}
 
+#bottom-nav {
+    display: flex;
+    margin: 0;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+}
+
+/*FONTS:*/
+/*font-family: 'Cinzel', serif;*/
+/*font-family: 'Open Sans Condensed', sans-serif;*/
+/*font-family: 'Josefin Sans', sans-serif;*/
+/*font-family: 'Abel', sans-serif;*/
