--- a/css/index.css
+++ b/css/index.css
@@ -48,6 +48,7 @@ h1 {
     font-size: 2rem;
     justify-content: flex-end;
     color: greenyellow;
+    text-decoration: none;
 }
 
 #center-content {
@@ -63,10 +64,10 @@ h1 {
     justify-content: center;
     align-items: center;
     height: 70vh;
-    width: 80vw;
-    right: 10vw;
+    width: 90vw;
+    /*right: 10vw;*/
     background-color: floralwhite;
-    border: .5em solid black
+    border: .2em solid black
 }
 
 #index-art1 {
