--- a/css/contact.css
+++ b/css/contact.css
@@ -3,18 +3,21 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    height: inherit;
+    width: inherit;
 }
 
 #contact-text {
     font-family: 'Josefin Sans', sans-serif;
     font-size: 2.5em;
     text-align: center;
-
+    text-space: 1em;
+    line-height: 1.2em;
 }
 
 #tuesday-img {
-    height: 300px;
-    width: 300px;
+    height: 30vh;
+    width: 20vw;
     border: .2em solid yellowgreen;
     border-radius: 60%;
 
