--- a/css/index.css
+++ b/css/index.css
@@ -71,8 +71,8 @@ h1 {
 }
 
 .index-art1 {
-    height: 50px;
-    width: 50px;
+    height: 75px;
+    width: 75px;
 }
 
 #index-art2 {
@@ -107,15 +107,23 @@ h1 {
 
 #bottom-nav {
     display: flex;
-    margin: 0;
+    margin: .5em;
     flex-direction: row;
     flex-wrap: wrap;
-    /*justify-content: space-around;*/
     align-items: flex-end;
+    justify-content: flex-end;
 }
 
-.sm-icon {
-    opacity: 1;
+.social-media-btn {
+    background-color: transparent;
+    margin-left: 1em;
+    width: 8em;
+    height: 4em;
+    border: .5px solid yellowgreen;
+    text-align: center;
+    font-family: 'Open Sans Condensed', sans-serif;
+    font-size: .4em;
+    text-decoration: none;
 }
 
 @media screen and (max-width: 800px){
