Working on css still

--- a/css/contact.css
+++ b/css/contact.css
@@ -8,6 +8,7 @@
 }
 
 #contact-text {
+    margin-top: 0;
     font-family: 'Josefin Sans', sans-serif;
     font-size: 2.5em;
     text-align: center;
@@ -16,8 +17,8 @@
 }
 
 #tuesday-img {
-    height: 30vh;
-    width: 20vw;
+    height: 40vh;
+    width: 15vw;
     border: .2em solid yellowgreen;
     border-radius: 60%;
 
