--- a/css/about.css
+++ b/css/about.css
@@ -4,7 +4,7 @@
 }
 
 #hello {
-    font-size: 4em;
+    font-size: 8vh;
     text-align: justify;
     font-family: 'Open Sans Condensed', sans-serif;
     color: #FF2F00;
@@ -16,8 +16,36 @@
     justify-content: center;
     align-items: center;
     font-family: 'Josefin Sans', sans-serif;
-    font-size: 2em;
+    font-size: 4vh;
     text-align: justify;
-    padding-left: 1em;
-    padding-right: 1em;
+    padding-left: 1vw;
+    padding-right: 1vw;
+}
+
+@media screen and (min-width: 420px) and (max-width: 1024px){
+    #about-text {
+        max-width: 100%;
+        max-height: 100%;
+    }
+    #hello {
+        font-size: 6vh;
+    }
+
+    #about-text {
+        font-size: 3vh;
+    }
+}
+
+@media screen and (max-width: 420px){
+    #about-text {
+        max-width: 100%;
+        max-height: 100%;
+    }
+    #hello {
+        font-size: 4vh;
+    }
+
+    #about-text {
+        font-size: 2vh;
+    }
 }
