--- a/css/contact.css
+++ b/css/contact.css
@@ -17,8 +17,8 @@
 }
 
 #tuesday-img {
-    height: 40vh;
-    width: 20vw;
+    height: 20rem;
+    width: 15rem;
     border: .2em solid yellowgreen;
     border-radius: 60%;
 }
@@ -29,8 +29,8 @@
     }
 
     #tuesday-img {
-        height: 40vh;
-        width: 30vw;
+        height: 27rem;
+        width: 22rem;
     }
 }
 
@@ -39,7 +39,7 @@
         font-size: 1em;
     }
     #tuesday-img {
-        height: 40vh;
-        width: 30vw;
+        height: 17rem;
+        width: 12rem;
     }
 }
