--- a/css/index.css
+++ b/css/index.css
@@ -120,6 +120,7 @@ h1 {
     flex-direction: row;
     flex-wrap: wrap;
     align-items: flex-end;
+    align-content: flex-end;
     justify-content: flex-end;
 }
 
