--- a/css/index.css
+++ b/css/index.css
@@ -11,6 +11,7 @@ body {
     max-width: 100%;
     margin: 0;
 }
+
 #background {
     width: 100vw;
     max-width: 100%;
@@ -21,6 +22,19 @@ body {
     background: -ms-linear-gradient(top, rgba(255, 98, 66, 1) 0%, rgba(255, 98, 66, 1) 32%, rgba(255, 135, 95, 1) 100%);
     background: linear-gradient(to bottom, rgba(255, 98, 66, 1) 0%, rgba(255, 98, 66, 1) 32%, rgba(255, 135, 95, 1) 100%);
 }
+
+/*a:link {*/
+    /*color: red;*/
+/*}*/
+/*a:visited {*/
+    /*color: green;*/
+/*}*/
+a:hover {
+    color: black;
+}
+/*a:active {*/
+    /*color: blue;*/
+/*}*/
 
 #top-nav {
     display: flex;
