Contact image responsiveness

--- a/css/contact.css
+++ b/css/contact.css
@@ -18,28 +18,29 @@
 
 #tuesday-img {
     height: 20rem;
-    width: 15rem;
+    width: 17rem;
     border: .2em solid yellowgreen;
     border-radius: 60%;
 }
 
-@media screen and (min-width: 420px) and (max-width: 1024px){
+@media screen and (min-width: 425px) and (max-width: 1024px){
     #contact-text {
         font-size: 2em;
     }
 
     #tuesday-img {
-        height: 27rem;
-        width: 22rem;
+        margin-top: 1em;
+        height: 12rem;
+        width: 10rem;
     }
 }
 
-@media screen and (max-width: 420px){
+@media screen and (max-width: 425px){
     #contact-text {
         font-size: 1em;
     }
     #tuesday-img {
-        height: 17rem;
-        width: 12rem;
+        height: 12rem;
+        width: 10rem;
     }
 }
