--- a/css/work.css
+++ b/css/work.css
@@ -3,28 +3,36 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: inherit;
+    height: auto;
     width: inherit;
-    overflow-x: scroll;
+    overflow-x: hidden;
 }
 
 #work-top-row {
     height: 100%;
-    display: flex;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
     margin: 0;
-    flex-direction: column;
-    flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
     text-align: center;
 }
 
-/*.projects {*/
-    /*font-size: 4em;*/
-    /*text-align: justify;*/
-    /*font-family: 'Open Sans Condensed', sans-serif;*/
-    /*color: #FF2F00;*/
-/*}*/
+.projects {
+    font-size: 1em;
+    font-family: 'Open Sans Condensed', sans-serif;
+    color: #FF2F00;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+.project-img {
+    width: 25em;
+    height: 20em;
+}
 
 .code-links {
     text-decoration: none;
