update "about" text and css

--- a/css/work.css
+++ b/css/work.css
@@ -6,7 +6,7 @@
     height: auto;
     width: inherit;
     overflow-x: hidden;
-    overflow-y: auto;
+    overflow-y: hidden;
 }
 
 #work-top-row {
