--- a/css/index.css
+++ b/css/index.css
@@ -195,6 +195,52 @@ h1 {
     border-radius: 60%;
 }
 
+#work-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: auto;
+    width: inherit;
+    overflow-x: hidden;
+    overflow-y: hidden;
+}
+
+#work-top-row {
+    height: 100%;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    margin: 0;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+.projects {
+    height: auto;
+    font-size: 1em;
+    font-family: 'Open Sans Condensed', sans-serif;
+    color: #FF2F00;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+.project-img {
+    width: 25em;
+    height: 20em;
+}
+
+.code-links {
+    text-decoration: none;
+    font-size: 6vh;
+    text-align: justify;
+    font-family: 'Open Sans Condensed', sans-serif;
+    color: #FF2F00;
+}
+
 @media screen and (min-width: 420px) and (max-width: 1024px){
     #top-nav {
         flex-direction: column;
@@ -249,6 +295,22 @@ h1 {
         margin-top: 1em;
         height: 12rem;
         width: 10rem;
+    }
+
+    .code-links {
+        font-size: 6vh;
+        color: black;
+    }
+
+    #work-top-row {
+        display: flex;
+        flex-direction: column;
+        overflow-y: scroll;
+        height: auto;
+    }
+
+    .project-img {
+        display: none;
     }
 }
 
@@ -307,6 +369,22 @@ h1 {
     #tuesday-img {
         height: 12rem;
         width: 10rem;
+    }
+
+    .code-links {
+        font-size: 5vh;
+        color: black;
+    }
+
+    #work-top-row {
+        display: flex;
+        flex-direction: column;
+        overflow-y: scroll;
+        height: auto;
+    }
+
+    .project-img {
+        display: none;
     }
 }
 
