--- a/css/index.css
+++ b/css/index.css
@@ -241,6 +241,74 @@ h1 {
     color: #FF2F00;
 }
 
+#contact {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: inherit;
+    width: inherit;
+}
+
+#contact-text {
+    margin-top: 0;
+    font-family: 'Josefin Sans', sans-serif;
+    font-size: 2.5em;
+    text-align: center;
+    text-space: 1em;
+    line-height: 1.2em;
+}
+
+div#form_sample{
+    text-align:center;
+    border:1px solid #ccc;
+    width:300px;
+    padding:0 50px 15px;
+    margin-top:20px;
+    box-shadow:0 0 15px;
+    border-radius:6px;
+    float:left
+}
+#main h1{
+    margin-top:40px
+}
+hr{
+    margin-top:-5px
+}
+label{
+    float:left;
+    font-size:16px
+}
+input[type="text"]{
+    width:100%;
+    margin-top:10px;
+    height:35px;
+    margin-bottom:25px;
+    padding:10px;
+    border:3px solid #2BC1F2
+}
+textarea{
+    width:100%;
+    border:3px solid #2BC1F2;
+    padding:10px;
+    margin-bottom:25px;
+    margin-top:10px;
+    height:100px;
+    resize:none
+}
+input[type="submit"]{
+    width:100%;
+    padding:10px 45px;
+    background-color:#2BC1F2;
+    border:none;
+    color:#fff;
+    font-size:18px;
+    font-weight:700;
+    cursor:pointer;
+    font-family:'Ubuntu',sans-serif
+}
+
+
 @media screen and (min-width: 420px) and (max-width: 1024px){
     #top-nav {
         flex-direction: column;
@@ -311,6 +379,10 @@ h1 {
 
     .project-img {
         display: none;
+    }
+
+    #contact-text {
+        font-size: 2em;
     }
 }
 
@@ -385,6 +457,10 @@ h1 {
 
     .project-img {
         display: none;
+    }
+
+    #contact-text {
+        font-size: 1em;
     }
 }
 
