--- a/css/index.css
+++ b/css/index.css
@@ -2,11 +2,14 @@
 html, body {
     height: 100%;
     width: 100%;
-    overflow: auto;
+    overflow-x: hidden;
 }
 
 body {
-    display: flex;
+    display: grid;
+    grid-template-rows: repeat(auto-fit, 6fr);
+    grid-auto-columns: 100%;
+    grid: "top-nav" "center-content1" "center-content2" "center-content3" "center-content4" "bottom-nav";
     height: auto;
     max-width: 100%;
     margin: 0;
@@ -37,6 +40,7 @@ a:hover {
 /*}*/
 
 #top-nav {
+    grid-row: top-nav;
     display: flex;
     height: 20vh;
     flex-direction: row;
@@ -73,14 +77,51 @@ h1 {
     text-decoration: none;
 }
 
-#center-content {
+.center-content1 {
+    grid-row: center-content1;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    margin-bottom: 2em;
+    padding-top: 2em;
+    padding-bottom: 2em;
 }
 
-#index-content {
+.center-content2 {
+    grid-row: center-content2;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 2em;
+    padding-top: 1em;
+    padding-bottom: 1em;
+}
+
+.center-content3 {
+    grid-row: center-content3;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 2em;
+    padding-top: 1em;
+    padding-bottom: 1em;
+}
+
+.center-content4 {
+    grid-row: center-content4;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 2em;
+    padding-top: 1em;
+    padding-bottom: 1em;
+}
+
+.index-content {
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -107,6 +148,13 @@ h1 {
     box-shadow: 0px 10px 93px 20px rgba(174,250,60,1);
 }
 
+.splash-info {
+    padding-top: 2em;
+    padding-bottom: 2em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
 .info-content {
     width: 30%;
@@ -115,6 +163,7 @@ h1 {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin: 1em;
 }
 
 .info-facts {
@@ -132,6 +181,7 @@ h1 {
     align-items: flex-end;
     align-content: flex-end;
     justify-content: flex-end;
+    padding-right: 2em;
 }
 
 .bottom-nav-text {
@@ -146,20 +196,20 @@ h1 {
     float: left;
     text-align: center;
     font-family: 'Open Sans Condensed', sans-serif;
-    font-size: 2vh;
+    font-size: 2.5vh;
 
 }
 
 .social-media-btn {
     background-color: transparent;
     margin-left: 1.5vw;
-    width: 8vw;
-    height: 4vh;
+    width: 10vw;
+    height: 6vh;
     border: .5px solid yellowgreen;
     padding: 0;
     text-align: center;
     font-family: 'Open Sans Condensed', sans-serif;
-    font-size: 2vh;
+    font-size: 2.5vh;
     text-decoration: none;
 }
 
@@ -168,11 +218,18 @@ h1 {
     flex-direction: column;
 }
 
-#hello {
+#hello, .work-titles {
     font-size: 8vh;
     text-align: justify;
     font-family: 'Open Sans Condensed', sans-serif;
     color: #FF2F00;
+}
+
+.about-content{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 #about-text {
@@ -190,7 +247,7 @@ h1 {
 
 #tuesday-img {
     height: 20rem;
-    width: 17rem;
+    width: auto;
     border: .2em solid yellowgreen;
     border-radius: 60%;
 }
@@ -205,7 +262,7 @@ h1 {
     overflow-x: hidden;
     overflow-y: hidden;
 }
-
+/*
 #work-top-row {
     height: 100%;
     display: grid;
@@ -215,14 +272,34 @@ h1 {
     align-items: center;
     text-align: center;
 }
+*/
+#work-top-row, #work-bottom-row {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+hr {
+    color: yellowgreen;
+    size: .5em;
+}
 
 .projects {
     height: auto;
-    font-size: 1em;
+    font-size: 1.5em;
     font-family: 'Open Sans Condensed', sans-serif;
-    color: #FF2F00;
+    color: #000000;
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+.art {
+    display: flex;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
     text-align: center;
@@ -231,6 +308,13 @@ h1 {
 .project-img {
     width: 25em;
     height: 20em;
+    margin: 1em;
+}
+
+.art-img {
+    width: auto;
+    height: 20em;
+    margin: 1em;
 }
 
 .code-links {
@@ -248,64 +332,68 @@ h1 {
     align-items: center;
     height: inherit;
     width: inherit;
+    padding-top: 1em;
+    padding-bottom: 1em;
 }
 
-#contact-text {
-    margin-top: 0;
-    font-family: 'Josefin Sans', sans-serif;
-    font-size: 2.5em;
-    text-align: center;
-    text-space: 1em;
-    line-height: 1.2em;
+form {
+    display: inline;
+    width: 100%;
 }
 
 div#form_sample{
+    justify-content: center;
+    align-items: center;
     text-align:center;
-    border:1px solid #ccc;
-    width:300px;
+    border:1px solid yellowgreen;
+    width: 600px;
     padding:0 50px 15px;
     margin-top:20px;
-    box-shadow:0 0 15px;
     border-radius:6px;
-    float:left
 }
+
 #main h1{
-    margin-top:40px
+    margin-top:40px;
+    width: 100%;
 }
+
 hr{
     margin-top:-5px
 }
+
 label{
     float:left;
     font-size:16px
 }
+
 input[type="text"]{
     width:100%;
     margin-top:10px;
     height:35px;
     margin-bottom:25px;
     padding:10px;
-    border:3px solid #2BC1F2
+    border:3px solid greenyellow;
 }
+
 textarea{
     width:100%;
-    border:3px solid #2BC1F2;
+    border:3px solid greenyellow;
     padding:10px;
     margin-bottom:25px;
     margin-top:10px;
     height:100px;
-    resize:none
+    resize:none;
 }
+
 input[type="submit"]{
     width:100%;
     padding:10px 45px;
-    background-color:#2BC1F2;
+    background-color: greenyellow;
     border:none;
     color:#fff;
     font-size:18px;
     font-weight:700;
     cursor:pointer;
-    font-family:'Ubuntu',sans-serif
 }
 
 
@@ -472,3 +560,5 @@ input[type="submit"]{
 /*font-family: 'Open Sans Condensed', sans-serif;*/
 /*font-family: 'Josefin Sans', sans-serif;*/
 /*font-family: 'Abel', sans-serif;*/
+
+/*comment to push css File to github*/
